// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  overflow-wrap: anywhere;
  word-break: break-word;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3:first-child {
  padding-left: 32px;
}

.emotion-3 * {
  font-size: 13px!important;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-3 * {
  line-height: 20px;
}

.emotion-3>div {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3>div>div>*,
.emotion-3>div>div p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-3>div>div>*:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <thead
        class="emotion-2"
      />
      <tbody>
        <tr
          class=""
        >
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                notebook
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
  margin: 24px 0;
}

.emotion-1 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-2 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
  position: relative;
}

.emotion-3 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  padding: 10px 8px!important;
  vertical-align: top;
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
}

.emotion-3:focus-visible {
  box-shadow: inset;
}

.emotion-3:last-child {
  padding-right: 24px;
}

.emotion-3 * {
  font-size: 13px!important;
}

.emotion-3>div {
  height: unset;
  min-height: unset;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-5 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
}

.emotion-5:focus-visible {
  box-shadow: inset;
}

.emotion-5:last-child {
  padding-right: 24px;
}

.emotion-5 * {
  font-size: 13px!important;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-15:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-16 {
  padding: 10px 8px!important;
  vertical-align: top;
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
}

.emotion-16 * {
  font-size: 13px!important;
}

.emotion-16>div {
  height: unset;
  min-height: unset;
}

.emotion-16 * {
  line-height: 20px;
}

.emotion-16>div {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-16>div>div>*,
.emotion-16>div>div p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-16>div>div>*:last-child {
  margin-bottom: 0;
}

.emotion-17 {
  padding: 0 8px;
  overflow: hidden;
  padding: 10px 8px!important;
  vertical-align: top;
  overflow-wrap: anywhere;
  word-break: break-word;
}

.emotion-17:focus-visible {
  box-shadow: inset;
}

.emotion-17:last-child {
  padding-right: 24px;
}

.emotion-17:first-child {
  padding-left: 32px;
}

.emotion-17 * {
  font-size: 13px!important;
}

.emotion-17>div {
  height: unset;
  min-height: unset;
}

.emotion-17 * {
  line-height: 20px;
}

.emotion-17>div {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-17>div>div>*,
.emotion-17>div>div p {
  margin: 0 0 12px;
  line-height: inherit;
}

.emotion-17>div>div>*:last-child {
  margin-bottom: 0;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

<div
    class="emotion-0"
    tabindex="0"
  >
    <table
      class="emotion-1"
    >
      <thead
        class="emotion-2"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-3"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                name
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                quantity
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                size
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                status
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                tags
              </div>
            </div>
          </th>
          <th
            class="emotion-5"
            role="columnheader"
            scope="col"
          >
            <div
              class="emotion-4"
            >
              <div>
                rating
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="emotion-15"
        >
          <th
            class="emotion-16"
            role="rowheader"
          >
            <div>
              journal
            </div>
          </th>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                25
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                14x21,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                brown, lined
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                9
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <th
            class="emotion-16"
            role="rowheader"
          >
            <div>
              notebook
            </div>
          </th>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                50
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                A
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                college-ruled,perforated
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                8
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <th
            class="emotion-16"
            role="rowheader"
          >
            <div>
              paper
            </div>
          </th>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                100
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                8.5x11,in
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                watercolor
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <th
            class="emotion-16"
            role="rowheader"
          >
            <div>
              planner
            </div>
          </th>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                75
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                22.85x30,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                2019
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                10
              </div>
            </div>
          </td>
        </tr>
        <tr
          class="emotion-15"
        >
          <th
            class="emotion-16"
            role="rowheader"
          >
            <div>
              postcard
            </div>
          </th>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                45
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                10x,cm
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                D
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                double-sided,white
              </div>
            </div>
          </td>
          <td
            class="emotion-17"
          >
            <div
              class="emotion-18"
            >
              <div>
                2
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
